# psd-run

./: .gitignore  .gitmodules  CMakeLists.txt  build-wasm.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
public/: CNAME
src/: main.tsx
src/components/: AiChat.tsx  App.tsx  FileDropZone.tsx  FontDropZone.tsx  LayerTree.tsx  Preview.tsx
src/lib/: claude-client.ts  qt-renderer.ts  types.ts
src/stores/: chat-store.ts  interaction-store.ts  psd-store.ts
src/wasm/: psdrun_qt.cpp
